--- a/content/index.html
+++ b/content/index.html
@@ -127,7 +127,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a></li></ul><li><a href='Solvespace.html'>Solvespace</a><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a><li><a href='Portable NX1980.html'>Portable NX1980</a><li><a href='NX1980_setup.html'>NX1980_setup</a><li><a href='NXOpen.html'>NXOpen</a></li></ul><li><a href='NX2008.html'>NX2008</a></li></ul><li><a href='Onshape.html'>Onshape</a><li class='has-children'><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><ul class='dropdown'><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a></li></ul><li><a href='Solvespace.html'>Solvespace</a><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li><a href='NX12.html'>NX12</a><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a><li><a href='Portable NX1980.html'>Portable NX1980</a><li><a href='NX1980_setup.html'>NX1980_setup</a><li><a href='NXOpen.html'>NXOpen</a></li></ul><li><a href='NX2008.html'>NX2008</a></li></ul><li><a href='Onshape.html'>Onshape</a><li class='has-children'><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><ul class='dropdown'><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -159,13 +159,13 @@ img.add_border {
 <p style="padding-left: 90px;">參考: <a href="https://mde.tw/cd2022_guide/content/run.html?src=https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/47ba006b45b227bc1135542f91adcc025f3f2590/grp_2022.py">grp_2022</a>, <a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/0999a227153ea9a20954e4b2b77f783337197627/w4_grp_src.py&amp;src2=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/0999a227153ea9a20954e4b2b77f783337197627/w4_grp_src2.py">2a 分組程式練習</a>, <a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/507db6ddb7b5bcdd3027235761208b32ac93bcd0/w4_b_grp.py&amp;src2=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/507db6ddb7b5bcdd3027235761208b32ac93bcd0/w4_b_grp_src2.py">2b 分組程式練習</a></p>
 <h4>下載課程工具:</h4>
 <p style="padding-left: 30px;">協同產品設計實習課程將會用到 NX1980, 若在電腦輔助設計室, 可以直接從 <a href="http://wcm.cycu.org:88/">http://wcm.cycu.org:88/</a> 下載.</p>
-<p style="padding-left: 30px;">NX12 版之後的版號:</p>
+<p style="padding-left: 30px;">NX12 版 (2017.10) 之後的版號:</p>
 <p style="padding-left: 60px;">2019.01: NX1847 開始啟動 Continuous Release</p>
-<p style="padding-left: 60px;">2019.06: NX1872 啟動每半年釋出一個累加 27 的 Series 版次</p>
+<p style="padding-left: 60px;">2019.06: NX1872 啟動每半年釋出一個累加 27 的 Series 版次號.</p>
 <p style="padding-left: 60px;">2019.12: NX1899 = NX1872 + 27</p>
 <p style="padding-left: 60px;">2020.06: NX1926 = NX1899 + 27</p>
 <p style="padding-left: 60px;">2020.12: NX1953 = NX1926 + 27</p>
-<p style="padding-left: 60px;"><span style="background-color: #ffff99;">2021.06: NX1980</span> = NX1953 + 27</p>
+<p style="padding-left: 60px;">2021.06: NX1980 = NX1953 + 27</p>
 <p style="padding-left: 60px;">2021.12: NX2007 = NX1980 + 27</p>
 <p style="padding-left: 60px;">2022.06: NX2034 = NX2007 + 27</p>
 <h4>讀取各學員每週工作內容:</h4>
