正在進行 w5 Pull Requests Wink 的加註流程

--- a/config/content.htm
+++ b/config/content.htm
@@ -209,11 +209,12 @@ var winkVideoData = {
 <p>NX 自 NX10 之後支援 NXOpen Python API:</p>
 <p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/10/nx_api/en_US/custom/nxopen_python_ref">https://docs.plm.automation.siemens.com/data_services/resources/nx/10/nx_api/en_US/custom/nxopen_python_ref</a></p>
 <p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_python_ref">https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_python_ref</a></p>
+<p style="padding-left: 30px;">利用 <a href="https://github.com/cjrh/easycython">https://github.com/cjrh/easycython</a> 將 .pyx 轉為 .pyd 後, 由 .py 導入後執行, 可<a href="https://medium.datadriveninvestor.com/using-easy-cython-to-speed-up-python-in-just-a-few-steps-fbda8d0cdeff">提升</a> Python 程式的執行速度. (<a href="https://www.laitimes.com/article/374w8_3nuce.html">參考</a>)</p>
 <h4>References:</h4>
-<p style="padding-left: 30px;"><a href="https://slideplayer.com/slide/11624773/">https://slideplayer.com/slide/11624773/</a> </p>
+<p style="padding-left: 30px;"><a href="https://slideplayer.com/slide/11624773/">https://slideplayer.com/slide/11624773/</a></p>
 <p style="padding-left: 30px;"><a href="https://community.sw.siemens.com/s/topic/0TO4O000000MiiWWAS/nx-customization-and-programming">NX Customization and Programming Discussion</a></p>
-<p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/nxopen/nxopen_getting_started_v12.pdf">https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/nxopen/nxopen_getting_started_v12.pdf</a> </p>
-<p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/snap/SNAP_Getting_Started_v12.pdf">https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/snap/SNAP_Getting_Started_v12.pdf</a> </p>
+<p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/nxopen/nxopen_getting_started_v12.pdf">https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/nxopen/nxopen_getting_started_v12.pdf</a></p>
+<p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/snap/SNAP_Getting_Started_v12.pdf">https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/snap/SNAP_Getting_Started_v12.pdf</a></p>
 <p style="padding-left: 30px;"></p><h2>NX1980</h2>
 <p>NX1980 於 2021.06 釋出, 完整安裝容量約 28 GB.</p>
 <h4>NX1980 參考頁面:</h4>
