update LaTeX page

--- a/config/content.htm
+++ b/config/content.htm
@@ -217,10 +217,13 @@ var winkVideoData = {
 <p>結論是: 在協同產品設計流程, 該如何開會?</p>
 <h2>TEX and LaTeX</h2>
 <p>為什麼協同產品設計實習需要採用 TEX 與 LaTeX 輸出技術文件?</p>
-<p><a href="https://github.com/mdecycu/4072pj1/blob/master/.github/workflows/main.yml">https://github.com/mdecycu/4072pj1/blob/master/.github/workflows/main.yml</a> </p>
-<p><a href="https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf">https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf</a> </p>
-<p><a href="http://tug.ctan.org/info/impatient/book.pdf">http://tug.ctan.org/info/impatient/book.pdf</a> </p>
-<p><a href="https://texdoc.org/serve/TeXbyTopic.pdf/0">https://texdoc.org/serve/TeXbyTopic.pdf/0</a> </p><h1>Assignments</h1>
+<p><a href="https://github.com/mdecycu/4072pj1/blob/master/.github/workflows/main.yml">https://github.com/mdecycu/4072pj1/blob/master/.github/workflows/main.yml</a></p>
+<p><a href="https://dev.to/mrturkmen/latex-with-github-actions-4580">https://dev.to/mrturkmen/latex-with-github-actions-4580</a> </p>
+<p><a href="https://www.reed.edu/cis/help/LaTeX/intro.html">https://www.reed.edu/cis/help/LaTeX/intro.html</a> </p>
+<p><a href="https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf">https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf</a></p>
+<p><a href="http://tug.ctan.org/info/impatient/book.pdf">http://tug.ctan.org/info/impatient/book.pdf</a></p>
+<p><a href="https://texdoc.org/serve/TeXbyTopic.pdf/0">https://texdoc.org/serve/TeXbyTopic.pdf/0</a></p>
+<p></p><h1>Assignments</h1>
 <p>協同產品設計實習課程學員評分要點:</p>
 <p>sustainable (可持續使用, 永續):</p>
 <p style="padding-left: 30px;">1 : capable of being sustained (可持續)</p>
@@ -566,8 +569,9 @@ var winkVideoData = {
 <p><a href="/downloads/UGOpen_spur_gear.c">UGOpen_spur_gear.c</a></p>
 <p>NX10 之後已經支援 NXOpen Python, 因此接下來可利用 <a href="https://code.visualstudio.com/docs/cpp/config-mingw">Visual Studio Code</a> 作為 IDE, 用來開發 NX12 之後的 C/C++ 與 Python 整合應用的延伸程式.</p>
 <h4>Reference:</h4>
-<p style="padding-left: 30px;"><a href="https://iter01.com/614343.html">https://iter01.com/614343.html</a> </p>
+<p style="padding-left: 30px;"><a href="https://iter01.com/614343.html">https://iter01.com/614343.html</a></p>
 <p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_ap">Get Started with NX Snap (2017).pdf</a></p>
+<p style="padding-left: 30px;"><a href="https://docs.sw.siemens.com/en-US/product/209349590/doc/PL20200522120320484.gs_snap/pdf/?audience=external">Get Started with NX Snap</a> (2021)</p>
 <p style="padding-left: 30px;"><a href="https://community.sw.siemens.com/s/topic/0TO4O000000MiiWWAS/nx-customization-and-programming">NX Custumization and Programming Discussions</a></p>
 <p></p><h2>NX2008</h2>
 <p>NX2008 於 2022.01 釋出, 屬於 NX2007 系列 (2021.12 釋出). 容量約 30 GB.</p>
