--- a/content/UGOpen.html
+++ b/content/UGOpen.html
@@ -149,8 +149,9 @@ img.add_border {
 <p><a href="./../downloads/UGOpen_spur_gear.c">UGOpen_spur_gear.c</a></p>
 <p>NX10 之後已經支援 NXOpen Python, 因此接下來可利用 <a href="https://code.visualstudio.com/docs/cpp/config-mingw">Visual Studio Code</a> 作為 IDE, 用來開發 NX12 之後的 C/C++ 與 Python 整合應用的延伸程式.</p>
 <h4>Reference:</h4>
-<p style="padding-left: 30px;"><a href="https://iter01.com/614343.html">https://iter01.com/614343.html</a> </p>
+<p style="padding-left: 30px;"><a href="https://iter01.com/614343.html">https://iter01.com/614343.html</a></p>
 <p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_ap">Get Started with NX Snap (2017).pdf</a></p>
+<p style="padding-left: 30px;"><a href="https://docs.sw.siemens.com/en-US/product/209349590/doc/PL20200522120320484.gs_snap/pdf/?audience=external">Get Started with NX Snap</a> (2021)</p>
 <p style="padding-left: 30px;"><a href="https://community.sw.siemens.com/s/topic/0TO4O000000MiiWWAS/nx-customization-and-programming">NX Custumization and Programming Discussions</a></p>
 <p></p><br />NXOpen << <a href='NXOpen.html'>Previous</a> <a href='NX2008.html'>Next</a> >> NX2008</div>
         
